<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 Anushek Prasal (SKULSHADY) <anushekprasal@gmail.com>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">GDSC MPSTME</string>

    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_failed">Google Sign In failed. Please try again.</string>
    <string name="sign_out">Sign Out</string>

    <string name="title_home">Home</string>
    <string name="title_triumphs">Triumphs</string>
    <string name="title_faq">FAQ</string>
    <string name="title_about">About</string>

    <string name="welcome_message">Welcome to GDSC MPSTME!</string>
    <string name="club_description">Google Developer Student Clubs are university based community groups for students interested in Google developer technologies. Students from all undergraduate or graduate programs with an interest in growing as a developer are welcome.\n\nBy joining a GDSC, students grow their knowledge in a peer-to-peer learning environment and build solutions for local businesses and their community.\n\nGDSC MPSTME was established in 2021, with its humble beginnings from 10 departments across 6 technical disciplines and flagship events like CodeWars 2021-22 and AI Summit 2021-22 as its legacy.</string>

    <string name="app_version">App Version</string>
    <string name="creator_label">Created by</string>
    <string name="creator_name">Anushek Prasal (SKULSHADY)</string>

    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="points_label">Points</string>

    <string name="app_theme_title">Theme</string>
    <string name="app_theme_system">System Default</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>

    <string name="achievements_title">Achievements</string>
    <string name="achievements_summary">Accomplishments of our talented members in all their glory</string>
    <string name="past_events_title">Past Events</string>
    <string name="past_events_summary">Exciting events and workshops held by our club in the past</string>

    <string name="participation_description">Participated</string>
    <string name="medal_gold_description">1st Place</string>
    <string name="medal_silver_description">2nd Place</string>
    <string name="medal_bronze_description">3rd Place</string>

</resources>