<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 Anushek Prasal (SKULSHADY) <anushekprasal@gmail.com>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.about.AboutFragment">

    <com.android.gdsc.mpstme.ui.FadingEdgeScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:animateLayoutChanges="true"
        android:requiresFadingEdge="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/ContextualCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/contextual_card_horizontal_padding"
                    android:paddingVertical="@dimen/contextual_card_horizontal_padding">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="24dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_gdsc" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_message"
                        android:textAppearance="@style/TitleStyle" />

                    <TextView
                        android:id="@+id/summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/club_description"
                        android:textAppearance="@style/SubtitleStyle" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContextualCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/contextual_card_horizontal_padding"
                    android:paddingVertical="@dimen/contextual_card_horizontal_padding">

                    <TextView
                        android:id="@+id/version_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="24dp"
                        android:text="@string/app_version"
                        android:textAppearance="@style/TitleStyle" />

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textAppearance="@style/SubtitleStyle" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/ContextualCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/contextual_card_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/contextual_card_horizontal_padding"
                    android:paddingVertical="@dimen/contextual_card_horizontal_padding">

                    <TextView
                        android:id="@+id/creator_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="24dp"
                        android:text="@string/creator_label"
                        android:textAppearance="@style/TitleStyle" />

                    <TextView
                        android:id="@+id/creator"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/creator_name"
                        android:textAppearance="@style/SubtitleStyle" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </com.android.gdsc.mpstme.ui.FadingEdgeScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>